--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "google-tts-api": "^2.0.2",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "latest",
+    "youtube-sr": "^4.3.10",
+    "ytdl-core": "^4.11.5"
   }
 }
