--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "dayjs": "^1.11.10",
     "google-tts-api": "^2.0.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "latest",
