--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "dayjs": "^1.11.10",
-    "google-tts-api": "^2.0.2",
+    "fluent-ffmpeg": "^2.1.2",
+    "google-tts-api": "2.0.2",
+    "jimp": "^0.22.12",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "latest",
+    "whatsapp-web.js": "1.23.1-alpha.5",
     "youtube-sr": "^4.3.10",
     "ytdl-core": "^4.11.5"
   }
