--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "1.23.1-alpha.5",
     "youtube-sr": "^4.3.10",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "preguntas": "1.0.0"
   }
 }
