corrección del error que hacia que cuando no se encontraba la canción ya no se podían pedir más canciones.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,19 @@
 node_modules
 n.mp3
 pruebas.js
-data.json
 change.py
 prueba.js
 data.json
+.azure
+next-steps.md
+infra/abbreviations.json
+infra/main.bicep
+azure.yaml
+infra/main.parameters.json
+infra/app/bot-whatsapp.js.bicep
+infra/modules/fetch-container-image.bicep
+infra/shared/apps-env.bicep
+infra/shared/dashboard-web.bicep
+infra/shared/keyvault.bicep
+infra/shared/monitoring.bicep
+infra/shared/registry.bicep
