--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,31 @@
-name: Deploy
+name: ci
+
 on:
   push:
-    branches: main
-  pull_request:
-    branches: main
+    branches:
+      - "main"
 
 jobs:
-  deploy:
-    name: Deploy
+  docker:
     runs-on: ubuntu-latest
-
-    permissions:
-      id-token: write # Needed for auth with Deno Deploy
-      contents: read # Needed to clone the repository
-
     steps:
-      - name: Clone repository
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Install Deno
-        uses: denoland/setup-deno@v1
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          deno-version: v1.x
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
         with:
-          node-version: lts/*
-
-      - name: Install step
-        run: "bash install.sh"
-
-      - name: Upload to Deno Deploy
-        uses: denoland/deployctl@v1
+          version: "lab:latest"
+          driver: cloud
+          endpoint: "sadgman/alastor-build"
+      - name: Build and push
+        uses: docker/build-push-action@v5
         with:
-          project: "mr-red-bot-whatsap-24"
-          entrypoint: "index.js"
-          root: ""
+          context: .
+          tags: "sadgman/alastor-bot:latest"
+          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry,push=true' }}
+  
