--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": ">=20.12.2"
+  },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "dayjs": "^1.11.10",
@@ -9,6 +12,6 @@
     "whatsapp-web.js": "1.23.1-alpha.5",
     "youtube-sr": "^4.3.10",
     "ytdl-core": "^4.11.5",
-    "preguntas": "^2.6.0"
+    "preguntas": "^2.7.0"
   }
 }
