--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "fluent-ffmpeg": "^2.1.2",
     "google-tts-api": "2.0.2",
     "jimp": "^0.22.12",
+    "languagetool-api": "^1.1.2",
+    "preguntas": "^2.8.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "1.23.1-alpha.5",
     "youtube-sr": "^4.3.10",
-    "ytdl-core": "^4.11.5",
-    "preguntas": "^2.8.0"
+    "ytdl-core": "^4.11.5"
   }
 }
