--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@sasmeee/igdl": "^1.0.0",
     "dayjs": "^1.11.10",
     "fluent-ffmpeg": "^2.1.2",
     "google-tts-api": "2.0.2",
