--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "node": ">=20.12.2"
   },
   "dependencies": {
+    "@distube/ytdl-core": "^4.13.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@sasmeee/igdl": "^1.0.0",
     "dayjs": "^1.11.10",
-    "fluent-ffmpeg": "^2.1.2",
+    "fluent-ffmpeg": "^2.1.3",
     "google-tts-api": "2.0.2",
     "jimp": "^0.22.12",
     "languagetool-api": "^1.1.2",
@@ -15,6 +16,6 @@
     "tiktok-downloaders": "^1.0.5",
     "whatsapp-web.js": "github:Sadgman/whatsapp-web.js#webpack-exodus",
     "youtube-sr": "^4.3.10",
-    "ytdl-core": "^4.11.5"
+    "ytdp": "1.0.0"
   }
 }
