chore: Agregar compatibilidad con sqlite a .gitignore y actualizar dependencia sqlite3 a la versión 5.1.7

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "languagetool-api": "^1.1.2",
     "preguntas": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
+    "sqlite3": "^5.1.7",
     "tiktok-downloaders": "^1.0.5",
     "twitter-downloader": "^1.1.8",
     "whatsapp-web.js": "github:Sadgman/whatsapp-web.js#webpack-exodus",
