Refactorizar el código para agregar información de registro en los mensajes enviados por AlastorBot

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jimp": "^0.22.12",
     "languagetool-api": "^1.1.2",
     "preguntas": "^3.2.0",
+    "puppeteer-core": "^23.1.0",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.1.7",
     "tiktok-downloaders": "^1.0.5",
