feat: add puppeteer-extra plugins for adblocking and stealth
The code changes in `package.json` add the necessary dependencies for the `puppeteer-extra-plugin-adblocker` and `puppeteer-extra-plugin-stealth` plugins. These plugins enhance the functionality of Puppeteer by providing adblocking and stealth capabilities, respectively.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "twitter-downloader": "^1.1.8",
     "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js",
     "youtube-sr": "^4.3.10",
-    "ytdp": "1.1.0"
+    "ytdp": "1.1.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-adblocker": "^2.13.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
