--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@sasmeee/igdl": "^1.0.0",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
     "google-tts-api": "2.0.2",
     "jimp": "^0.22.12",
