Añadir carpeta de audio en assets y actualizar .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .wwebjs_auth/
 .wwebjs_cache/
 node_modules
-n.mp3
 pruebas.js
 change.py
 prueba.js
@@ -10,12 +9,10 @@ video.mp4
 cookie.json
 data.db
 session
-1722825397321-base.js
-1722823546163-base.js
-1722817120688-base.js
 config.json
 .vscode/launch.json
 .env
+assets/audio
 package-lock.json
 cookies/cookiemc.json
 data.sql
