--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "node": ">=20.15.1"
   },
   "dependencies": {
-    "@distube/ytdl-core": "^4.14.2",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@sasmeee/igdl": "^1.0.0",
     "dayjs": "^1.11.10",
@@ -23,6 +22,7 @@
     "twitter-downloader": "^1.1.8",
     "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js",
     "youtube-sr": "^4.3.10",
+    "ytdl-core": "^4.11.5",
     "ytdp": "1.2.0"
   }
 }
