--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@distube/ytdl-core": "^4.16.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@sasmeee/igdl": "^1.0.0",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
